# sparv-sbx-whisper-import

./: .bumpversion.toml  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  cliff.toml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: check.yml  release.yml  rolling.yml  scheduled.yml  test.yml
examples/: .gitignore
examples/aspenstrom-mp3/: config.yaml
examples/aspenstrom-mp3/expected_export/xml_export.pretty/: aspenstrom_trappan_aspenstrom_export.gold.xml  aspenstrom_varldsforklaring_aspenstrom_export.gold.xml
examples/aspenstrom-ogg/: config.yaml
examples/aspenstrom-ogg/expected_export/xml_export.pretty/: aspenstrom_trappan_aspenstrom_export.gold.xml  aspenstrom_varldsforklaring_aspenstrom_export.gold.xml
examples/aspenstrom-wav/: config.yaml
examples/aspenstrom-wav/expected_export/xml_export.pretty/: aspenstrom_trappan_aspenstrom_export.gold.xml  aspenstrom_varldsforklaring_aspenstrom_export.gold.xml
examples/hello-whisper/: config.yaml
examples/hello-whisper-mp3/: config.yaml
examples/hello-whisper-mp3/expected_export/xml_export.pretty/: aspenstrom_varldsforklaring_aspenstrom_export.gold.xml
examples/hello-whisper/expected_export/xml_export.pretty/: aspenstrom_varldsforklaring_aspenstrom_export.gold.xml
examples/metadata/: config.yaml
scripts/: compare_export_xml.py  transform_readme.py
src/sbx_whisper_import/: __init__.py  cli.py  hf_whisper_importer.py  metadata.yaml  whisper_import.py
tests/: conftest.py  test_examples.py  test_hf_whisper_importer.py  test_whisper_import.py
tests/__snapshots__/: test_examples.ambr  test_hf_whisper_importer.ambr  test_whisper_import.ambr
tests/__snapshots__/test_hf_whisper_importer/: test_aspenstrom.json
