[project]
name = "sparv-sbx-whisper-import"
version = "0.1.0"
description = "Allow Sparv to import audio as text with KB Whisper"
readme = "README.md"
authors = [
    { name = "Språkbanken Text", email = "sb-info@svenska.gu.se" },
    { name = "Kristoffer Andersson", email = "kristoffer.andersson@gu.se" },
]
requires-python = ">=3.11"
dependencies = [
 "sparv>=5.3.1",
 "torch>=2.8.0",
 "transformers>=4.55.2",
]

[project.entry-points."sparv.plugin"]
sbx_whisper_import = "sbx_whisper_import"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "sbx_whisper_import"
